[gd_scene load_steps=24 format=2]

[ext_resource path="res://Sprites/sprite/frame_2_delay-0.2s.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/sprite/frame_4_delay-0.2s.png" type="Texture" id=3]
[ext_resource path="res://Sprites/sprite/frame_1_delay-0.2s.png" type="Texture" id=4]
[ext_resource path="res://Sprites/sprite/frame_0_delay-0.2s.png" type="Texture" id=5]
[ext_resource path="res://Sprites/sprite/frame_3_delay-0.2s.png" type="Texture" id=6]
[ext_resource path="res://Sprites/sprite_b/frame_0_delay-0.2s.png" type="Texture" id=7]
[ext_resource path="res://Sprites/sprite_b/frame_1_delay-0.2s.png" type="Texture" id=8]
[ext_resource path="res://Sprites/sprite_b/frame_2_delay-0.2s.png" type="Texture" id=9]
[ext_resource path="res://Sprites/sprite_b/frame_4_delay-0.2s.png" type="Texture" id=10]
[ext_resource path="res://Sprites/sprite_b/frame_3_delay-0.2s.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Ze/ze_parado/frame_2_delay-0.2s.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Ze/ze_parado/frame_1_delay-0.2s.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Ze/ze_correndo/ze_correndo2.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Ze/ze_correndo/ze_correndo3.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Ze/ze_correndo/ze_correndo1.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Ze/ze_correndo/ze_correndo4.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Ze/ze_parado/frame_0_delay-0.2s.png" type="Texture" id=27]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65.75, 139.5 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 22 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 2 )

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2( -0.25, 9.5 )
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 1 )

[node name="Fantasma" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 8 )
scale = Vector2( 0.42, 0.42 )

[node name="GhostBack" type="AnimatedSprite" parent="Fantasma"]
position = Vector2( 0, -2.38095 )
scale = Vector2( -0.298, 0.298 )
frames = SubResource( 3 )
playing = true

[node name="Ghost" type="AnimatedSprite" parent="Fantasma"]
position = Vector2( 0, -2.38095 )
scale = Vector2( 0.297619, 0.297619 )
frames = SubResource( 2 )
frame = 2
playing = true

[node name="Ze" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 8 )
scale = Vector2( 0.5, 0.5 )

[node name="ZeCorrendo" type="AnimatedSprite" parent="Ze"]
frames = SubResource( 12 )
frame = 2
playing = true

[node name="ZeIdle" type="AnimatedSprite" parent="Ze"]
frames = SubResource( 13 )
frame = 2
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="JoystickButtons" type="CanvasLayer" parent="."]

[node name="LeftButton" type="TextureButton" parent="JoystickButtons"]
margin_left = 144.0
margin_top = 496.0
margin_right = 222.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 168, -10.575 )
mouse_filter = 1
action_mode = 0
keep_pressed_outside = true

[node name="RightButton" type="TextureButton" parent="JoystickButtons"]
margin_left = 280.0
margin_top = 504.0
margin_right = 345.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 39.26, -10.575 )
mouse_filter = 1

[node name="UpButton" type="TextureButton" parent="JoystickButtons"]
margin_left = 222.0
margin_top = 432.0
margin_right = 280.0
margin_bottom = 506.0
rect_pivot_offset = Vector2( 97.35, 64 )
mouse_filter = 1

[node name="DownButton" type="TextureButton" parent="JoystickButtons"]
margin_left = 222.0
margin_top = 560.0
margin_right = 280.0
margin_bottom = 634.0
rect_pivot_offset = Vector2( 97.35, -59.245 )
mouse_filter = 1

[node name="MidButton" type="TextureButton" parent="JoystickButtons"]
anchor_right = 0.05
anchor_bottom = 0.025
margin_left = 222.0
margin_top = 504.0
margin_right = 262.0
margin_bottom = 544.0

[connection signal="button_down" from="JoystickButtons/LeftButton" to="." method="_on_LeftButton_button_down"]
[connection signal="button_up" from="JoystickButtons/LeftButton" to="." method="_on_LeftButton_button_up"]
[connection signal="button_down" from="JoystickButtons/RightButton" to="." method="_on_RightButton_button_down"]
[connection signal="button_up" from="JoystickButtons/RightButton" to="." method="_on_RightButton_button_up"]
[connection signal="button_down" from="JoystickButtons/UpButton" to="." method="_on_UpButton_button_down"]
[connection signal="button_up" from="JoystickButtons/UpButton" to="." method="_on_UpButton_button_up"]
[connection signal="button_down" from="JoystickButtons/DownButton" to="." method="_on_DownButton_button_down"]
[connection signal="button_up" from="JoystickButtons/DownButton" to="." method="_on_DownButton_button_up"]
[connection signal="button_down" from="JoystickButtons/MidButton" to="." method="_on_MidButton_button_down"]
[connection signal="button_up" from="JoystickButtons/MidButton" to="." method="_on_MidButton_button_up"]
